--- a/emacs.org
+++ b/emacs.org
@@ -188,12 +188,14 @@
 #+END_SRC
 ** Frame title
 #+BEGIN_SRC emacs-lisp
-(setq-default
- frame-title-format
- '(:eval (format "%s %s" (buffer-name)
-                 (cond (buffer-file-truename (concat "(" buffer-file-truename ")"))
-                       (dired-directory (concat "{" dired-directory "}"))
-                       (t "[no file]")))))
+(defun generate-frame-title ()
+  (format "%s %s" (buffer-name)
+          (cond (buffer-file-truename (concat "(" buffer-file-truename ")"))
+                (dired-directory (concat "{" dired-directory "}"))
+                (t "[no file]"))))
+
+(setq-default frame-title-format
+              '(:eval (generate-frame-title)))
 #+END_SRC
 * BEHAVIOUR
 #+BEGIN_SRC emacs-lisp
@@ -1089,7 +1091,7 @@ _m_  many-windows     |  _k_  step       _r_  remove break
          ( "C-r" . helm-global-mark-ring)
          ( "b" . helm-resume)
          ( "C-b" . helm-resume)))
-  (:map org-mode-map (("C-j" . helm-mini)))
+  (:map org-mode-map (("C-j" . helm-mini) ("<C-tab>" . eyebrowse-next) ))
   (:map lisp-interaction-mode-map (("C-j" . helm-mini)))
   :config
   (setq helm-candidate-number-limit 500)
@@ -1179,9 +1181,6 @@ _m_  many-windows     |  _k_  step       _r_  remove break
       (custom-set-faces '(cursor ((t (:background "blue")))))
       (custom-set-faces '(mode-line ((t (:background "#333377")))))
       (global-swift-mode))))
-
-
-
 #+end_src
 
 *** eyebrowse / frame selection
@@ -1189,7 +1188,8 @@ _m_  many-windows     |  _k_  step       _r_  remove break
 (use-package eyebrowse :ensure t
   :config
   (setq eyebrowse-mode-line-separator " " eyebrowse-new-workspace t)
-  (eyebrowse-mode t))
+  (eyebrowse-mode t)
+  (customize-set-variable 'eyebrowse-mode-line-style 'smart))
 
 (defhydra hydra-frame-helper
   (:color blue)
@@ -1207,13 +1207,44 @@ eyebrowse               frame management
   ("M-o" other-frame nil)
   ("M-SPC" other-frame nil)
   ("M-d" delete-frame nil)
-  ("M-j" eyebrowse-prev-window-config nil)
-  ("M-k" eyebrowse-next-window-config nil)
+  ("M-j" eyebrowse-prev nil)
+  ("M-k" eyebrowse-next nil)
   ("M-r" eyebrowse-rename-window-config nil)
   ("M-c" eyebrowse-create-window-config nil)
   ("M-C" eyebrowse-close-window-config nil))
 
 (global-set-key (kbd "M-SPC") 'hydra-frame-helper/body)
+
+(global-set-key (kbd "<C-tab>") 'eyebrowse-next)
+(global-set-key (kbd "<C-iso-lefttab>") 'eyebrowse-prev)
+
+(use-package posframe :defer t)
+(defun show-eyebrowse-posframe ()
+  (interactive)
+  (progn
+    (when (posframe-workable-p)
+      (posframe-show " *my-posframe-buffer*"
+                     :string (eyebrowse-mode-line-indicator)
+                     :position (cons -15 10)
+                     :font "Monospace-16"
+                     :timeout 3
+                     :internal-border-width 2
+                     :internal-border-color "red"))))
+
+
+(custom-set-faces '(internal-border ((t (:foreground "OrangeRed" :background "OrangeRed")))))
+(custom-set-faces '(eyebrowse-mode-line-active ((t (:foreground "OrangeRed" :weight bold :height 1.2)))))
+
+
+(defun eyebrowse-next (args)
+  (interactive "P")
+  (progn (eyebrowse-next-window-config args)
+         (show-eyebrowse-posframe)))
+
+(defun eyebrowse-prev (args)
+  (interactive "P")
+  (progn (eyebrowse-prev-window-config args)
+         (show-eyebrowse-posframe)))
 #+END_SRC
 ** Utility functions
 #+BEGIN_SRC emacs-lisp
