handle .json files

--- a/emacs.org
+++ b/emacs.org
@@ -1036,6 +1036,7 @@ _m_  many-windows     |  _k_  step       _r_  remove break
         ("\\.pom\\'" . xml-mode)
         ("\\.ldif\\'" . ldif-mode)
         ("\\.toml\\'" . toml-mode)
+        ("\\.json\\'" . json-mode)
 
         ;;programming modes
         ("\\.ps1\\'" . powershell-mode)
