eyebrowse will now wrap around

--- a/emacs.org
+++ b/emacs.org
@@ -1191,6 +1191,7 @@ _m_  many-windows     |  _k_  step       _r_  remove break
 (use-package eyebrowse :ensure t
   :config
   (setq eyebrowse-mode-line-separator " " eyebrowse-new-workspace t)
+  (setq eyebrowse-wrap-around t)
   (eyebrowse-mode t)
   (customize-set-variable 'eyebrowse-mode-line-style 'smart))
 
@@ -1238,7 +1239,6 @@ eyebrowse               frame management
 
 (custom-set-faces '(internal-border ((t (:foreground "OrangeRed" :background "OrangeRed")))))
 (custom-set-faces '(eyebrowse-mode-line-active ((t (:foreground "OrangeRed" :weight bold :height 1.2)))))
-
 
 (defun eyebrowse-next (args)
   (interactive "P")
