simplify org-notes synching

--- a/emacs.org
+++ b/emacs.org
@@ -604,12 +604,8 @@
 (defun org-notes-synch-fn ()
 (interactive)
   (let* ((default-directory "~/org-notes"))
-	(message "synching org notes with git repo")
-	(start-process "proc-git-status" "notes-sync-output" "git" "status")
-	(sit-for 5)
-	(start-process "proc-git-pull" "notes-sync-output" "git" "pull")
-	(sit-for 5)
-	(start-process "proc-git-push" "notes-sync-output" "git" "push")))
+	(message "pulling org-notes repo")
+	(start-process "proc-git-pull" "notes-sync-output" "git" "pull")))
 
 ;; Run the above every 2 mins (if we are idle)
 (run-with-idle-timer (* 60 2) t 'org-notes-synch-fn)
