--- a/emacs.org
+++ b/emacs.org
@@ -18,6 +18,11 @@
 
 (setq url-http-attempt-keepalives nil)
 
+;; On Windows system we'll just ignore signatures altogether...
+;; too much hassle.
+(cond ((string-equal system-type "windows-nt")
+       (setq package-check-signature nil)))
+
 ;; Make sure we have use-package installed.
 ;; All other packages will be installed by it.
 (if (not (package-installed-p 'use-package))
